
General      : Add new Exiv2 0.27 support.
General      : Use DrMinGW has crash handler under Windows.
General      : Port all export/import tool to OAuth2 authentification.
General      : New tool to adjust quickly time and date information from items.
               Tool will be available in AlbumView, ImageEditor, LightTable, and Showfoto.
General      : New tool to export to Pinterest social network.
General      : New tool to export to OneDrive webservice.
General      : New tool to export to Box webservice.
General      : New tool to export to Ipfs webservice.
General      : All bundles use last Lenfun 0.3.95 to process automatic lens correction.
General      : Add QWebEngine support.
General      : Fix all Krazy static analyzer reports.
General      : Update internal Libraw to last 0.19.0.
               New camera supported:
               * Apple: Phone 8, iPhone 8 plus, iPhone X
               * BlackMagic: URSA Mini 4k, URSA Mini 4.6k, URSA Mini Pro 4.6k
               * Canon: PowerShot A410, A540, D10, ELPH 130 IS, ELPH 160 IS, SD750, SX100 IS,SX130 IS, SX160 IS, SX510 HS, SX10 IS, IXUS 900Ti
                        PowerShot G1 X Mark III, G9 X Mark II, EOS 6D Mark II, EOS 77D, EOS 200D, EOS 800D, EOS M6, EOS M100
               * Casio: EX-ZR4100/5100
               * DJI: Phantom4 Pro/Pro+, Zenmuse X5, Zenmuse X5R
               * FujiFilm: S6500fd, GFX 50S, X100f, X-A3, X-A5, X-A10, X-A20, X-E3, X-H1, X-T20
               * Hasselblad: H6D-100c, A6D-100c
               * Huawei: P9 (EVA-L09/AL00), Honor6a, Honor9, Mate10 (BLA-L29)
               * Leica: CL, M10, TL2
               * LG: V20 (F800K), VS995
               * Nikon: D850, D5600, D7500, Coolpix B700
               * Olympus: E-PL9, E-M10 Mark III, TG-5
               * OnePlus: A3303, A5000